--- a/src/config/config.json
+++ b/src/config/config.json
@@ -14,10 +14,10 @@
         "dialect": "mysql"
     },
     "production": {
-        "username": "root",
-        "password": null,
-        "database": "database_production",
-        "host": "127.0.0.1",
+        "username": "usqzy0b77zmv7oen",
+        "password": "d5PtTohhx6uacMyaEgsg",
+        "database": "b1oyffmoqdjtrw2zdwmv",
+        "host": "b1oyffmoqdjtrw2zdwmv-mysql.services.clever-cloud.com",
         "dialect": "mysql"
     }
 }
